[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "openmc_cad_adapter"
version = "0.1.0"
description = "Tool to convert OpenMC Geometry input file to CAD"
readme = "README.md"
authors = [
  { name = "Kevin Tew", email = "kevin@coreform.com" },
  {  name = "Patrick Shriwise", email = "pshriwise@gmail.com"}
]
license = { file = "LICENSE" }
requires-python = ">=3.10"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=2.2.0",
    "ruff>=0.8.3",
]

[project.urls]
"Bug Tracker" = "https://github.com/openmc-dev/openmc_cad_adapter/issues"
Discussions = "https://openmc.discourse.org"
"Source Code" = "https://github.com/openmc-dev/openmc_cad_adapter"

[project.scripts]
openmc_to_cad = "openmc_cad_adapter.to_cubit_journal:openmc_to_cad"
